--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur odio atque a excepturi, eligendi obcaecati quas minima quod voluptatibus amet debitis! Repellendus, voluptatibus animi quos nulla illo distinctio cumque nam!</P>
+    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.</P>
 </body>
 </html>
