--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
     <h1>About Me</h1>
     <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.
-    <a href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">Youtube</a></P>
-    <a href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">Youtube</a>
+    <a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></P>
 </body>
 </html>
