--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.</P>
-    <P></P>
+    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.\n</P>
     <a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a>
 </body>
 </html>
