--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>criptixo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>About Me</h1>
-    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.\n</P>
-<div class="links">
+    <meta name="theme-color" content="#13a026">
+    <meta property="og:title" content="criptixo">
+    <meta property="og:description" content="my website">
+    <meta property="og:image" content="./main/miku.gif">
+    <meta name="twitter:card" content="./main/miku.gif">
+    <link rel="stylesheet" type="text/css" href="./main/stylesheet.css">
+<style type="text/css">.fc-ab-root { display: none !important } body > div.fc-ab-root { display: none !important } .fbs-auth__container.fbs-auth__adblock { display: none !important } .overlay-34_Kj { display: none !important } .wrapper-3AzfF { display: none !important } .fEy1Z2XT { display: none !important } .nytc---modal-window---windowContainer.nytc---modal-window---isShown.nytc---shared---blackBG { display: none !important } .tp-modal { display: none !important } .tp-backdrop.tp-active { display: none !important } .c-nudge__container.c-gate__container { display: none !important } .c-nudge__container.c-regGate__container { display: none !important } .css-n7r8pg { display: none !important } .css-1bd8bfl { display: none !important } .overlay__59af11e2 { display: none !important } .tp_modal { display: none !important } .tp-backdrop.tp-active { display: none !important } div[class^='sp_message_container'] { display: none !important } div[class^='sp_veil'] { display: none !important } </style></head>
+
+<body style="background:url('./main/canvas.gif');">
+    <div class="body" style="align-content: center">
+         <p style="font-size: 32px">Welcome to my page</p>
+        <noscript><p>js disabled? luckily there is none here!</p> </noscript>
+        <div class="image">
+            <img width="180" src="./main/miku.gif" alt="title image" title="Hatsune Miku">
+        </div>
+        <audio controls autoplay>
+            <source src="./main/LamezeP.mp3" type="audio/mpeg">
+        </audio>
+        <div class="bio">
+            <p>
+            <br> 22 | He/They | Internet Addict | Otaku | Computer enthusiast <br><br> <b>Some things about me:</b><br> I like Counter-Strike, Breakcore/lolicore, Miku, Linux, and way too many other things.<br> My favourite breakcore albums are goreshit 9 and hikihomori days.
+            </p>
+        </div>
+
+        <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
                     <td style="text-align:center"><a class="link" href="https://x.com/criptixo">X</a> </td>
@@ -32,5 +53,20 @@
                 </tr></tbody></table>
         </div>
     </div>
-</body>
-</html>
+    <footer>
+        <div class="footer-text" style="padding-top: 7px;">
+            <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
+            <br>
+            <p>Fun stuff!</p>
+            <a href="https://wiki.archlinux.org/title/Arch_Linux"> <img alt="Arch Linux" src="./bottons/arch.gif"> </a>
+            <a href="https://winamparchive.org/"> <img alt="Winamp - it really whips the llama's ass" src="./bottons/winamp.gif"></a>
+            <a href="http://keygen-fm.ru/"> <img alt="Keygen-FM" src="./bottons/keygen-fm.gif"></a>
+            <br>
+        </div>
+    </footer>
+
+
+
+
+
+</body></html>
