--- a/index.html
+++ b/index.html
@@ -1,3 +1,40 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>About Me</h1>
+    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.\n</P>
+<div class="links">
+            <table style="border:0px solid;margin-left:auto;margin-right:auto;">
+                <tbody><tr>
+                    <td style="text-align:center"><a class="link" href="https://x.com/criptixo">X</a> </td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://lazer.ppy.sh/users/24341653">Osu!</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" rel="me" href="https://discord.gg/mYPfSaVK5H">Discord</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.last.fm/user/criptixo">Last.fm</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://reddit.com/u/criptixo">Reddit</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/criptixo">YouTube</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/id/criptixo">Steam</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://myanimelist.net/profile/criptixo">MyAnimeList</a></td>
+                </tr></tbody></table>
+        </div>
+    </div>
+</body>
+</html>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <html lang="en">
