--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
-                    <td style="text-align:center"><a class="link" href="https://x.com/criptixo">X</a> </td>
+                    <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
                     <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                    <td style="text-align:center"><a class="link" href="https://lazer.ppy.sh/users/24341653">Osu!</a></td>
                 </tr>
                 <tr>
                     <td style="text-align:center"><a class="link" rel="me" href="https://discord.gg/mYPfSaVK5H">Discord</a></td>
