--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
                 <tbody><tr>
                     <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
                     <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                </tr>
-                <tr>
-                    <td style="text-align:center"><a class="link" rel="me" href="https://discord.gg/mYPfSaVK5H">Discord</a></td>
-                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                    <td style="text-align:center"><a class="link" href="https://www.last.fm/user/criptixo">Last.fm</a></td>
-                </tr>
-                <tr>
-                    <td style="text-align:center"><a class="link" href="https://reddit.com/u/criptixo">Reddit</a></td>
-                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/criptixo">YouTube</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
                 </tr>
                 <tr>
                     <td style="text-align:center"><a class="link" href="https://steamcommunity.com/id/criptixo">Steam</a></td>
