--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
                 </tr>
                 <tr>
-                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/id/criptixo">Steam</a></td>
+                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/profiles/76561198403904746/">Steam</a></td>
                     <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                    <td style="text-align:center"><a class="link" href="https://myanimelist.net/profile/criptixo">MyAnimeList</a></td>
+                    <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
                 </tr></tbody></table>
         </div>
     </div>
