--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>About Me</h1>
-    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.\n</P>
+    <h1><b>About Me</b></h1>
+    <P>
+    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>
+</P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
