--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>About Me</h1>
-    <P>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.\n</P>
+    <h1><b>About Me</b></h1>
+    <P>
+    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>
+</P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
@@ -53,6 +55,30 @@
             </p>
         </div>
 
+        <div class="links">
+            <table style="border:0px solid;margin-left:auto;margin-right:auto;">
+                <tbody><tr>
+                    <td style="text-align:center"><a class="link" href="https://x.com/criptixo">X</a> </td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://lazer.ppy.sh/users/24341653">Osu!</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" rel="me" href="https://discord.gg/mYPfSaVK5H">Discord</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.last.fm/user/criptixo">Last.fm</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://reddit.com/u/criptixo">Reddit</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/criptixo">YouTube</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/id/criptixo">Steam</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://myanimelist.net/profile/criptixo">MyAnimeList</a></td>
+                </tr></tbody></table>
+        </div>
+    </div>
     <footer>
         <div class="footer-text" style="padding-top: 7px;">
             <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
