--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1><b>About Me</b></h1>
     <P>
-    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>
+    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br>
 </P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
