--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
             <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
             <br>
             <p>Fun stuff!</p>
-            <a href="https://lolicore.net"> <img alt="Lolicor.net" src="./main/lolicorenet.gif"> </a>
-            <a href="https://winamparchive.org/"> <img alt="Winamp - it really whips the llama's ass" src="./bottons/winamp.gif"></a>
-            <a href="http://keygen-fm.ru/"> <img alt="Keygen-FM" src="./bottons/keygen-fm.gif"></a>
+            <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
+
             <br>
         </div>
     </footer>
