--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<body style="background:url('./main/canvas.gif');">
+<body style="background:url('./main/purplestars.gif');">
     <div class="body" style="align-content: center">
         <div class="image">
             <img width="180" src="./main/miku.gif" alt="title image" title="Hatsune Miku">
