--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>About Me :]</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<body style="background:url('./main/purplestars.gif');"></body>
 <body>
     <h1><b>About Me</b></h1>
     <P>
@@ -29,7 +30,6 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<body style="background:url('./main/purplestars.gif');">
     <div class="body" style="align-content: center">
         <div class="image">
             <img width="180" src="./main/miku.gif" alt="title image" title="Hatsune Miku">
