--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <P>
     <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br>
 </P>
+<div class="header"> 
+    <div class="container"> 
+      <div class="container-bg">
+      </div>
+      <div class="container-content">
+    <h1>Test Test Test Test Test Test</h1> 
+    <p>Test Test Test Test Test Test Test Test Test Test Test Test</p>
+      </div>
+    </div>
+    </div>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
