--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1><b>About Me</b></h1>
     <P>
-    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br>
+    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br> <br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a>
 </P>
 <div class="header"> 
     <div class="container"> 
