--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <div class="container-bg">
       </div>
       <div class="container-content">
-    <h1>Test Test Test Test Test Test</h1> 
-    <p>Test Test Test Test Test Test Test Test Test Test Test Test</p>
+        <h1><b>About Me</b></h1>
+        <P>
+        <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br> <br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a>
+    </P>
       </div>
     </div>
     </div>
