--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
         <P>
         <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br> <br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a>
     </P>
+    <div class="links">
+        <table style="border:0px solid;margin-left:auto;margin-right:auto;">
+            <tbody><tr>
+                <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
+                <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
+            </tr>
+            <tr>
+                <td style="text-align:center"><a class="link" href="https://steamcommunity.com/profiles/76561198403904746/">Steam</a></td>
+                <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
+            </tr></tbody></table>
+    </div>
       </div>
+      <p>Fun stuff!</p>
+            <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
+
     </div>
     </div>
 <div class="links">
@@ -53,8 +69,6 @@
     </div>
     <footer>
         <div class="footer-text" style="padding-top: 7px;">
-            <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
-            <br>
             <p>Fun stuff!</p>
             <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
 
