--- a/index.html
+++ b/index.html
@@ -2,42 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me :]</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1><b>About Me</b></h1>
     <P>
-    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br> <br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a>
+    <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br>
 </P>
-<div class="header"> 
-    <div class="container"> 
-      <div class="container-bg">
-      </div>
-      <div class="container-content">
-        <h1><b>About Me</b></h1>
-        <P>
-        <br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br> <br>I like breakcore, lolicore, and TF2<br> <br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a>
-    </P>
-    <div class="links">
-        <table style="border:0px solid;margin-left:auto;margin-right:auto;">
-            <tbody><tr>
-                <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
-                <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
-            </tr>
-            <tr>
-                <td style="text-align:center"><a class="link" href="https://steamcommunity.com/profiles/76561198403904746/">Steam</a></td>
-                <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
-            </tr></tbody></table>
-    </div>
-      </div>
-      <p>Fun stuff!</p>
-            <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
-
-    </div>
-    </div>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
@@ -57,6 +29,19 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
+<html lang="en">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>criptixo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#13a026">
+    <meta property="og:title" content="criptixo">
+    <meta property="og:description" content="my website">
+    <meta property="og:image" content="./main/miku.gif">
+    <meta name="twitter:card" content="./main/miku.gif">
+<style type="text/css">.fc-ab-root { display: none !important } body > div.fc-ab-root { display: none !important } .fbs-auth__container.fbs-auth__adblock { display: none !important } .overlay-34_Kj { display: none !important } .wrapper-3AzfF { display: none !important } .fEy1Z2XT { display: none !important } .nytc---modal-window---windowContainer.nytc---modal-window---isShown.nytc---shared---blackBG { display: none !important } .tp-modal { display: none !important } .tp-backdrop.tp-active { display: none !important } .c-nudge__container.c-gate__container { display: none !important } .c-nudge__container.c-regGate__container { display: none !important } .css-n7r8pg { display: none !important } .css-1bd8bfl { display: none !important } .overlay__59af11e2 { display: none !important } .tp_modal { display: none !important } .tp-backdrop.tp-active { display: none !important } div[class^='sp_message_container'] { display: none !important } div[class^='sp_veil'] { display: none !important } </style></head>
+
+<body style="background:url('./main/canvas.gif');">
     <div class="body" style="align-content: center">
         <div class="image">
             <img width="180" src="./main/miku.gif" alt="title image" title="Hatsune Miku">
@@ -64,11 +49,40 @@
         <audio controls autoplay>
             <source src="./main/LamezeP.mp3" type="audio/mpeg">
         </audio>
-        
+        <div class="bio">
+            <p>
+            <br> 22 | He/They | Internet Addict | Otaku | Computer enthusiast <br><br> <b>Some things about me:</b><br> I like Counter-Strike, Breakcore/lolicore, Miku, Linux, and way too many other things.<br> My favourite breakcore albums are goreshit 9 and hikihomori days.
+            </p>
+        </div>
 
+        <div class="links">
+            <table style="border:0px solid;margin-left:auto;margin-right:auto;">
+                <tbody><tr>
+                    <td style="text-align:center"><a class="link" href="https://x.com/criptixo">X</a> </td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://lazer.ppy.sh/users/24341653">Osu!</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" rel="me" href="https://discord.gg/mYPfSaVK5H">Discord</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.last.fm/user/criptixo">Last.fm</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://reddit.com/u/criptixo">Reddit</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/criptixo">YouTube</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/id/criptixo">Steam</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://myanimelist.net/profile/criptixo">MyAnimeList</a></td>
+                </tr></tbody></table>
+        </div>
     </div>
     <footer>
         <div class="footer-text" style="padding-top: 7px;">
+            <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
+            <br>
             <p>Fun stuff!</p>
             <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
 
