--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
             <br>
             <p>Fun stuff!</p>
-            <a href="https://lolicore.net"> <img alt="Lolicore.net" src="./main/lolicorenet.gif"> </a>
-
+            <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
+            <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
             <br>
         </div>
     </footer>
