--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="body" style="align-content: center">
         <div class="image">
-            <img width="180" src="./main/miku.gif" alt="title image" title="Hatsune Miku">
+            <img width="180" src="./main/hammer.gif" alt="title image" title="Hatsune Miku">
         </div>
         <audio controls autoplay>
             <source src="./main/LamezeP.mp3" type="audio/mpeg">
