--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
        
     <footer>
         <div class="footer-text" style="padding-top: 7px;">
-            <p>This site is hosted with <a class="link" href="https://github.com/criptixo/criptixo.github.io">GitHub Pages</a>.</p>
+            <p><b>GLORY TO THE SOVIET UNION ☭</b></p>
             <br>
-            <p>Fun stuff!</p>
+            <p>Weirdo shit</p>
             <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
             <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
             <br>
