--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
-                    <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
-                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
                     <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
                 </tr>
                 <tr>
                     <td style="text-align:center"><a class="link" href="https://steamcommunity.com/profiles/76561198403904746/">Steam</a></td>
                     <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
-                    <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
+                    <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
                 </tr></tbody></table>
         </div>
     </div>
@@ -33,7 +33,7 @@
             <img width="180" src="./main/hammer.gif" alt="title image" title="Hatsune Miku">
         </div>
         <audio controls autoplay>
-            <source src="./main/LamezeP.mp3" type="audio/mpeg">
+            <source src="./main/nyan.mp3" type="audio/mpeg">
         </audio>
        
     <footer>
