--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="body" style="align-content: center">
         <div class="image">
             <img width="180" src="./main/hammer.gif" alt="title image" title="Hatsune Miku">
-            <a href=".KoolPix.html">KoolPics</a>
+            <a href="KoolPix.html">KoolPics</a>
         </div>
         <audio controls autoplay>
             <source src="./main/nyan.mp3" type="audio/mpeg">
