--- a/KoolPix.html
+++ b/KoolPix.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="pics.css">
 </head>
 <body>
-    <h1><b>WALL OF SHAME</b></h1>
+   <h1><font COLOR="#d98ef0"><b>WALL OF SHAME</b></font></h1>
 </body>
 </html>
