--- a/KoolPix.html
+++ b/KoolPix.html
@@ -2,10 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WALL OF SHAME</title>
     <link rel="stylesheet" href="pics.css">
 </head>
 <body>
    <h1><font COLOR="#d98ef0"><b>WALL OF SHAME</b></font></h1>
+   <p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23
+
+    **Formatting guide**
+    Date - Time & Timezone (Game) Gamemode [if applicable], Map
+    User "Persons name" (steam id [If I can find it])</p>
 </body>
 </html>
