--- a/KoolPix.html
+++ b/KoolPix.html
@@ -7,10 +7,6 @@
 </head>
 <body>
    <h1><font COLOR="#d98ef0"><b>WALL OF SHAME</b></font></h1>
-   <p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23
-
-    **Formatting guide**
-    Date - Time & Timezone (Game) Gamemode [if applicable], Map
-    User "Persons name" (steam id [If I can find it])</p>
+   <p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p>
 </body>
 </html>
