--- a/KoolPix.html
+++ b/KoolPix.html
@@ -5,10 +5,10 @@
     <title>WALL OF SHAME</title>
     <link rel="stylesheet" href="pics.css">
 </head>
+<source src="./main/OH SHIT.mp3" type="audio/mpeg">
 <body>
-    <source src="./main/OH SHIT.mp3" type="audio/mpeg">
-    <h1><font COLOR="#d98ef0"><b>WALL OF SHAME</b></font></h1>
+    <h1><font color="#d98ef0"><b>WALL OF SHAME</b></font></h1>
     <a href="https://cbvrd.github.io">Back to Main Page</a>
-    <p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p>
+    <font color="#d98ef0"><p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p></font>
 </body>
 </html>
