--- a/KoolPix.html
+++ b/KoolPix.html
@@ -8,9 +8,11 @@
 <body>
     <h1><font color="#d98ef0"><b>WALL OF SHAME</b></font></h1>
     <a href="https://cbvrd.github.io">Back to Main Page</a>
+    <br>
     <audio controls autoplay>
         <source src="./main/OH SHIT.mp3" type="audio/mpeg">
     </audio>
     <font color="#d98ef0"><p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p></font>
+    <font color="#d98ef0"><p><br>5/18/23 - 9:39 PM PST (CS:GO) Wingman, Lake<br>Users "The Cream Dream | ヅ" (https://steamcommunity.com/id/slipshotpew)<br>and "peenbean" (https://steamcommunity.com/profiles/76561198880718847/)</p></font>
 </body>
 </html>
