--- a/KoolPix.html
+++ b/KoolPix.html
@@ -12,7 +12,8 @@
     <audio controls autoplay>
         <source src="./main/OH SHIT.mp3" type="audio/mpeg">
     </audio>
-    <font color="#d98ef0"><p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p></font>
+    <font color="#d98ef0"><p><br>This is for anyone who talks mad SH1T then gets destroyed. Started 5/18/23<br><br>**Formatting guide**<br>Date - Time & Timezone (Game) Gamemode [if applicable], Map<br>User "Persons name" (steam id [If I can find it])</p></font>
     <font color="#d98ef0"><p><br>5/18/23 - 9:39 PM PST (CS:GO) Wingman, Lake<br>Users "The Cream Dream | ヅ" (https://steamcommunity.com/id/slipshotpew)<br>and "peenbean" (https://steamcommunity.com/profiles/76561198880718847/)</p></font>
+    <font color="#d98ef0"><p><br>Firstly in warmup The Cream Dream was buying awp and shooting and repetitively killing us from garage roof. A little annoying and rude but who cares. We get into the game. In pistol round I get an ace from a clean kill, so I get a little hyped and t-bag the dead guy I just headshot. My teammate types "get ♥♥♥♥ on" other team doesn't respond. We decide to save next round and get killed Cream Dream types "ez" and "yawn". I have enough money to buy an awp and get a quick ace next round and I type "get ♥♥♥♥♥♥" again no response. A few more rounds of banter and ♥♥♥♥ talking. Last round we were up one at 8 - 7 my teammate died early and other team ♥♥♥♥ talks to no end. I had a mag-7 and was on the roof. I drop down and kill the one guy that had an awp, then I lurk and wait for the last guy Cream Dream. I turn the corner and shoot him in the back and kill him whilst he had an ak. We win and I immediately type "get ♥♥♥♥ on" and my teammate spams insults Cream and peebean leave without even typing GG.</p></font>
 </body>
 </html>
