--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1><b>About Me</b></h1>
-    <P><br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>akcoI like brere, lolicore, and TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
+    <P><br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>I like breakcore, lolicore, and TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
