--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
                 </tr></tbody></table>
         </div>
     </div>
+    <br><a href="KoolPix.html">Wall of Shame!!!</a>
 </body>
 </html>
 
 
     <div class="body" style="align-content: center">
+
         <div class="image">
             <img width="180" src="./main/hammer.gif" alt="title image" title="Hatsune Miku">
             <br><a href="KoolPix.html">Wall of Shame!!!</a>
