--- a/KoolPix.html
+++ b/KoolPix.html
@@ -19,5 +19,20 @@
     
     <font color="#d98ef0"><p><br>6/16/23 - 7:20 PM PST (TF2) Payload, Upward<br>User "Rengoku" (<a href="https://steamcommunity.com/id/averagedumbass/">https://steamcommunity.com/id/averagedumbass/</a>)</p></font>
     <font color="#d98ef0"><p><br>He was playing sniper on Upward and got killed a few times by me. While I was playing sniper. He then left saying his team was trash saying quote "Garbage cans would be better". I thought he was rude and bad so I went to his account and added him so I could get him mad. I called him bad and he got a little pissed but it wasn't enough. So I said that demon slayer is ass and that was the tipping point. He said "Kill yourself fagget" which was funny but not enough. He then said that he wasn't bad at the game because he gets hackusations called on him and he has over 1000 hours. This was actually bad for him because I (at the time of this event) only had 80 hours on sniper. So yeah if you are ass don't blame it on your team. He then blocked me.<br><br>TLDR: Guy was ass at the game and blamed it on his teammates. I killed him and called him bad. He then told me to kill myself and that he had 1000 hours on sniper which is 920 more hours then me as sniper. He then blocked me.<br>(Update) the guy had 7111.2 hours on sniper (I think he may have been using an infinite hours exploit) so anyway he must have been really bad to lose to me.</p></font>
+
+
+
+
+    <footer>
+        <div class="footer-text" style="padding-top: 7px;">
+            <p><b>GLORY TO THE SOVIET UNION ☭</b></p>
+            <br>
+            <p>Weirdo shit!</p>
+            <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
+            <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
+            <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
+            <br>
+        </div>
+    </footer>
 </body>
 </html>
