--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <p>Weirdo shit!</p>
             <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
             <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
+            <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
             <br>
         </div>
     </footer>
