--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             <p><b>GLORY TO THE SOVIET UNION ☭</b></p>
             <br>
             <p>Weirdo shit!</p>
-            <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
-            <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
+            <a href="https://lolicore.net"> <img alt="lolicore" src="./main/lolicorenet.gif"> </a>
+            <a href="https://wiby.me"> <img alt="wiby" src="./main/wiby.gif"> </a>
             <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
+            <a href="https://winamparchive.org"> <img alt="winamp" src="./main/winamp.gif"> </a>
             <br>
         </div>
     </footer>
