--- a/KoolPix.html
+++ b/KoolPix.html
@@ -29,6 +29,7 @@
             <a href="https://lolicore.net"> <img alt="lolicore.net" src="./main/lolicorenet.gif"> </a>
             <a href="https://wiby.me"> <img alt="wiby.me" src="./main/wiby.gif"> </a>
             <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
+            <a href="https://winamparchive.org"> <img alt="winamp" src="./main/winamp.gif"> </a>
             <br>
         </div>
     </footer>
