--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <header>
+        <p>Languages</p>
+        <a href="https://cbvrd.github.io"> <img alt="English" src="./main/United States flag-XS-anim.gif"> </a>
+    </header>
+
+
     <h1><b>About Me</b></h1>
     <P><br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>I like breakcore, lolicore, and TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
 <div class="links">
