--- a/index_sp.html
+++ b/index_sp.html
@@ -1,1 +1,65 @@
 
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre Mí :]</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header>
+        <p>Languages</p>
+        <a href="https://cbvrd.github.io"> <img alt="English" src="./main/United States flag-XS-anim.gif"> </a>
+        <a href="https://cbvrd.github.io"> <img alt="English" src="./main/United States flag-XS-anim.gif"> </a>
+    </header>
+
+
+    <h1><b>Sobre Mí</b></h1>
+    <P><br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>I like breakcore, lolicore, and TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
+<div class="links">
+            <table style="border:0px solid;margin-left:auto;margin-right:auto;">
+                <tbody><tr>
+                    <td style="text-align:center"><a class="link" href="https://www.youtube.com/channel/UC3QCu-BFqm1QXgERi7RPUBw">YouTube</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://cbvrd.bandcamp.com">Bandcamp</a></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center"><a class="link" href="https://steamcommunity.com/profiles/76561198403904746/">Steam</a></td>
+                    <td style="text-align:center"><a aria-label="spacer">&nbsp;&nbsp;&nbsp;</a></td>
+                    <td style="text-align:center"><a class="link" href="https://twitter.com/CoolGuyGames1">Twitter</a> </td>
+                </tr></tbody></table>
+        </div>
+    </div>
+    <br><a href="KoolPix.html">Wall of Shame!!!</a>
+</body>
+</html>
+
+
+    <div class="body" style="align-content: center">
+
+        <div class="image">
+            <img width="180" src="./main/hammer.gif" alt="title image" title="Hammer&Sickle">
+        </div>
+        <audio controls autoplay>
+            <source src="./main/nyan.mp3" type="audio/mpeg">
+        </audio>
+       
+    <footer>
+        <div class="footer-text" style="padding-top: 7px;">
+            <p><b>GLORY TO THE SOVIET UNION ☭</b></p>
+            <br>
+            <p>Weirdo shit!</p>
+            <a href="https://lolicore.net"> <img alt="lolicore" src="./main/lolicorenet.gif"> </a>
+            <a href="https://wiby.me"> <img alt="wiby" src="./main/wiby.gif"> </a>
+            <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
+            <a href="https://winamparchive.org"> <img alt="winamp" src="./main/winamp.gif"> </a>
+            <br>
+        </div>
+    </footer>
+
+
+
+
+
+</body></html>
