--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <p>Languages</p>
+        <p>Languages/Idiomas</p>
         <a href="https://cbvrd.github.io"> <img alt="English" src="./main/United States flag-XS-anim.gif"> </a>
         <a href="index_sp.html"> <img alt="Spanish" src="./main/Mexico flag-XS-anim.gif"> </a>
     </header>
