--- a/index_sp.html
+++ b/index_sp.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <p>Idiomas</p>
+        <p>Idiomas/Languages</p>
         <a href="https://cbvrd.github.io"> <img alt="English" src="./main/United States flag-XS-anim.gif"> </a>
         <a href="index_sp.html"> <img alt="Spanish" src="./main/Mexico flag-XS-anim.gif"> </a>
     </header>
