--- a/index_sp.html
+++ b/index_sp.html
@@ -16,7 +16,7 @@
 
 
     <h1><b>Sobre Mí</b></h1>
-    <P><br>I go by a few names on the internet. I mainly go by CoolGuyGames, but for music I go by cbvrd.<br>I like breakcore, lolicore, and TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
+    <P><br>Yo uso un pocos nombres en el internet. Yo generalmente uso CoolGuyGames, pero por música, yo uso cbvrd.<br>Me gustan breakcore, lolicore, y TF2<br>My fav albums are <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> and <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
