--- a/index_sp.html
+++ b/index_sp.html
@@ -16,7 +16,7 @@
 
 
     <h1><b>Sobre Mí</b></h1>
-    <P><br>Yo es estudio español, así que esperar errors en mi gramática.<br>Yo uso un pocos nombres en el internet. Yo generalmente uso CoolGuyGames, pero por música, yo uso cbvrd.<br>Me gustan breakcore, lolicore, y TF2.<br>Mi álbums favorito son <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> y <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
+    <P><br>Estoy estudio español, así que esperar errors en mi gramática.<br>Yo uso un pocos nombres en el internet. Yo generalmente uso CoolGuyGames, pero por música, yo uso cbvrd.<br>Me gustan breakcore, lolicore, y TF2.<br>Mi álbums favorito son <a class="link" href="https://madbreaks.bandcamp.com/album/mbs001">MBS001</a> y <a class="link" href="https://goreshit.bandcamp.com/album/my-love-feels-all-wrong-digipak">my love feels all wrong. digipak</a><br></P>
 <div class="links">
             <table style="border:0px solid;margin-left:auto;margin-right:auto;">
                 <tbody><tr>
