--- a/index_sp.html
+++ b/index_sp.html
@@ -31,7 +31,7 @@
                 </tr></tbody></table>
         </div>
     </div>
-    <br><a href="KoolPix.html">Wall of Shame!!!</a>
+    <br><a href="KoolPix_sp.html">¡¡¡MURO DE DESHONORA!!!</a>
 </body>
 </html>
 
