--- a/index_sp.html
+++ b/index_sp.html
@@ -49,7 +49,7 @@
         <div class="footer-text" style="padding-top: 7px;">
             <p><b>GLORIA A LA UNIÓN SOVIÉTICA ☭</b></p>
             <br>
-            <p>Weirdo shit!</p>
+            <p>¡Raro caca!</p>
             <a href="https://lolicore.net"> <img alt="lolicore" src="./main/lolicorenet.gif"> </a>
             <a href="https://wiby.me"> <img alt="wiby" src="./main/wiby.gif"> </a>
             <a href="http://www.textfiles.com"> <img alt="ascii" src="./main/asciifor.gif"> </a>
