--- a/ultimatum.html
+++ b/ultimatum.html
@@ -12,6 +12,9 @@
 
             
     <img id="image_shower">
+    window.onload = function(){
+        get_random_image();
+    }
 
         
         <audio controls autoplay>
