--- a/ultimatum.html
+++ b/ultimatum.html
@@ -12,9 +12,9 @@
 
             
     <img id="image_shower">
-    window.onload = function(){
+    <script>window.onload = function(){
         get_random_image();
-    }
+    }</script>
 
         
         <audio controls autoplay>
