--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img width="180" src="./main/hammer.gif" alt="title image" title="Hammer&Sickle">
         </div>
         <audio controls autoplay>
-            <source src="./main/sayonara.mp3" type="audio/mpeg">
+            <source src="./main/nyan.mp3" type="audio/mpeg">
         </audio>
        
     <footer>
