--- a/Ava Kris Tyson/index_ava.html
+++ b/Ava Kris Tyson/index_ava.html
@@ -220,7 +220,7 @@
     </div>
     <div class="alert">MRBEAST IS TRYING TO SILENCE US!!!</div>
     <div class="alert-subtext">MrBeast is actively taking down all the websites hosting this leak. To help spread the truth, you can download the full website and host it yourself. This way, he won't be able to silence us all because there will be too many of us.</div>
-    <a href="/Ava%20Kris%20Tyson/download" class="download-button">Download</a>
+    <a href="/Ava%20Kris%20Tyson/download.html" class="download-button">Download</a>
     <div class="results" id="results"></div>
     <div class="frame" id="frame"></div>
 
