--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     
     <br><a href="KoolPix.html">Wall of Shame!!!</a>
+    <br><a href="/Ava%20Kris%20Tyson/index_ava.html">Ava Kris Tyson leaks!</a>
 </body>
 </html>
 
