--- a/index_sp.html
+++ b/index_sp.html
@@ -32,6 +32,7 @@
         </div>
     </div>
     <br><a href="KoolPix_sp.html">¡¡¡MURO DE DESHONORA!!!</a>
+    <br><a href="KoolPix_sp.html">¡Filtracións de Ava Kris Tyson!</a>
 </body>
 </html>
 
