--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <br><a href="KoolPix.html">Wall of Shame!!!</a>
     <br><a href="/Ava%20Kris%20Tyson/index_ava.html">Ava Kris Tyson Discord leaks!</a>
+    <br><a href="Stories.html">Sometimes short stories written by me.</a>
 </body>
 </html>
 
