--- a/Stories.html
+++ b/Stories.html
@@ -12,11 +12,12 @@
     <br>
     <font color="#2649d4"><a href="https://cbvrd.github.io">Back to Main Page</a></font>
     <br>
+    <font color="#2649d4">Song: saleontomorrow - if you throw your eyes my way i will catch them.</font>
     <audio controls autoplay>
         <source src="./main/saleontomorrow - 01 - if you throw your eyes my way i will catch them.mp3" type="audio/mpeg">
     </audio>
     
-    <br><a href="./Stories/rain.html">rain</a>
+    <br><a href="./Stories/rain.html">\n/nrain</a>
     
     <footer>
         <div class="footer-text" style="padding-top: 7px;">
